# udemydl-gui

./: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  commitlint.config.js  package.json  pnpm-lock.yaml
apps/app/: .eslintignore  .eslintrc  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/app/src/: global.css  main.tsx
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src/components/ui/: button.tsx
apps/docs/: README.md  package.json  source.config.ts
apps/docs/app/: layout.config.tsx
apps/docs/app/(home)/: layout.tsx  page.tsx
apps/docs/app/docs/[[...slug]]/: page.tsx
apps/docs/lib/: source.ts
